--- a/scripts/5_metrics_collection/collect_metrics.ipynb
+++ b/scripts/5_metrics_collection/collect_metrics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,115 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>experiment_id</th>\n",
-       "      <th>antibody_id</th>\n",
-       "      <th>antigen_id</th>\n",
-       "      <th>submitted</th>\n",
-       "      <th>haddock_best_cluster</th>\n",
-       "      <th>haddock_best_pdb_path</th>\n",
-       "      <th>haddock_Nstruc</th>\n",
-       "      <th>haddock_Evdw_plus_0.1Eelec</th>\n",
-       "      <th>haddock_Evdw_plus_0.1Eelec_sd</th>\n",
-       "      <th>haddock_Evdw</th>\n",
-       "      <th>...</th>\n",
-       "      <th>haddock_AIRviol</th>\n",
-       "      <th>haddock_AIRviol_sd</th>\n",
-       "      <th>haddock_dihedviol</th>\n",
-       "      <th>haddock_dihedviol_sd</th>\n",
-       "      <th>haddock_BSA</th>\n",
-       "      <th>haddock_BSA_sd</th>\n",
-       "      <th>haddock_score</th>\n",
-       "      <th>haddock_score_sd</th>\n",
-       "      <th>haddock_prodigy_deltaG_kcalpermol</th>\n",
-       "      <th>haddock_prodigy_dissociation_constant_M</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>TEST_5A3I</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 27 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  experiment_id antibody_id antigen_id  submitted  haddock_best_cluster  \\\n",
-       "0     TEST_5A3I         NaN        NaN        NaN                   NaN   \n",
-       "\n",
-       "   haddock_best_pdb_path  haddock_Nstruc  haddock_Evdw_plus_0.1Eelec  \\\n",
-       "0                    NaN             NaN                         NaN   \n",
-       "\n",
-       "   haddock_Evdw_plus_0.1Eelec_sd  haddock_Evdw  ...  haddock_AIRviol  \\\n",
-       "0                            NaN           NaN  ...              NaN   \n",
-       "\n",
-       "   haddock_AIRviol_sd  haddock_dihedviol  haddock_dihedviol_sd  haddock_BSA  \\\n",
-       "0                 NaN                NaN                   NaN          NaN   \n",
-       "\n",
-       "   haddock_BSA_sd  haddock_score  haddock_score_sd  \\\n",
-       "0             NaN            NaN               NaN   \n",
-       "\n",
-       "   haddock_prodigy_deltaG_kcalpermol  haddock_prodigy_dissociation_constant_M  \n",
-       "0                                NaN                                      NaN  \n",
-       "\n",
-       "[1 rows x 27 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Read in Experiments worksheet\n",
-    "experiments = pd.read_excel('../../Experiments.xlsx', sheet_name='Experiments').head(0)\n",
+    "experiments = pd.read_excel('../../Experiments.xlsx', sheet_name='Experiments')#.head(0)\n",
     "## For testing...\n",
-    "experiments = experiments.append({'experiment_id': 'TEST_5A3I'}, ignore_index=True)\n",
+    "# experiments = experiments.append({'experiment_id': 'TEST_5A3I'}, ignore_index=True)\n",
     "\n",
     "# experiments.head()"
    ]
@@ -152,53 +51,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Create empty dataframe to store results\n",
+    "ss_df = pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Getting metrics for experiment: TEST_5A3I\n"
+      "Getting metrics for experiment: 12H5__EPI1158808\n",
+      "Getting metrics for experiment: FLD21.140__EPI355443\n"
      ]
     }
    ],
    "source": [
     "for index, experiment in experiments.iterrows():\n",
     "    experiment_id = experiment['experiment_id']\n",
-    "    print(f\"Getting metrics for experiment: {experiment_id}\")\n",
     "\n",
     "    ## Check if the output/ directory exists\n",
-    "    outputs_dir = f\"../../data/experiments/{experiment_id}/output/analysis/6_caprieval_analysis\"\n",
+    "    outputs_dir = f\"../../data/experiments/{experiment_id}/output/10_caprieval\"\n",
     "    if os.path.exists(outputs_dir):\n",
-    "        ## Read in the cluster metrics .tsv file, skipping rows that start with # character\n",
-    "        cluster_metrics_file = f\"{outputs_dir}/capri_clt.tsv\"\n",
-    "        metrics_df_iter = pd.read_csv(cluster_metrics_file, sep='\\t', comment='#')\n",
-    "        ## Filter to the row with the lowest vdw score\n",
-    "        metrics_df_iter_best = metrics_df_iter[metrics_df_iter['vdw'] == metrics_df_iter['vdw'].min()]\n",
-    "        best_cluster = metrics_df_iter_best.iloc[0]['cluster_id']\n",
-    "        \n",
+    "        print(f\"Getting metrics for experiment: {experiment_id}\")\n",
+    "\n",
     "        ## Read in the individual metrics file\n",
-    "        ss_metrics_file = f\"{outputs_dir}/capri_ss.tsv\"\n",
-    "        ss_df_iter = pd.read_csv(ss_metrics_file, sep='\\t', comment='#')\n",
-    "        ## Filter to the rows with the best cluster\n",
-    "        ss_df_iter = ss_df_iter[ss_df_iter['cluster-id'] == best_cluster]\n",
-    "        ## Find the best PDB with the lowest vdw score\n",
-    "        ss_df_iter_best = ss_df_iter[ss_df_iter['vdw'] == ss_df_iter['vdw'].min()].iloc[0]\n",
+    "        ss_metrics_path = f\"{outputs_dir}/capri_ss.tsv\"\n",
+    "        ss_df_iter = pd.read_csv(ss_metrics_path, sep='\\t', comment='#')\n",
+    "        ss_df_iter['experiment_id'] = experiment_id\n",
     "\n",
-    "        ## Add the best PDB path to the metrics dataframe\n",
-    "        metrics_df_iter_best['best_pdb_path'] = ss_df_iter_best['model']\n",
-    "        metrics_df_iter_best['experiment_id'] = experiment_id\n",
-    "        metrics_df = metrics_df.append(metrics_df_iter_best)\n",
-    "\n",
-    "    else:\n",
-    "        print(f\"\\tNo output/ directory found.\")\n",
-    "        continue\n"
+    "        ## If row has the lowest vdw value, flag 'best_pdb_flag' as True (otherwise False)\n",
+    "        ss_df_iter['best_pdb_flag'] = ss_df_iter['vdw'].rank(method='min', ascending=True)\n",
+    "        ss_df_iter['best_pdb_flag'] = ss_df_iter['best_pdb_flag'].apply(lambda x: True if x == 1 else False)\n",
+    "        \n",
+    "        ss_df = ss_df.append(ss_df_iter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['model', 'md5', 'caprieval_rank', 'score', 'irmsd', 'fnat', 'lrmsd',\n",
+       "       'ilrmsd', 'dockq', 'cluster-id', 'cluster-ranking',\n",
+       "       'model-cluster-ranking', 'air', 'angles', 'bonds', 'bsa', 'cdih',\n",
+       "       'coup', 'dani', 'desolv', 'dihe', 'elec', 'improper', 'rdcs', 'rg',\n",
+       "       'total', 'vdw', 'vean', 'xpcs', 'experiment_id', 'best_pdb_flag'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ss_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ss_df.columns.values\n",
+    "\n",
+    "## Columns to discard\n",
+    "discard_cols = ['md5', 'cluster-id', 'cluster-ranking', 'model-cluster-ranking',\n",
+    "                'angles', 'bonds', 'cdih', 'coup', 'dani', 'improper',\n",
+    "                'rdcs', 'rg', 'vean', 'xpcs']\n",
+    "\n",
+    "## Columns to keep\n",
+    "meta_cols = ['experiment_id', 'model', 'best_pdb_flag', 'caprieval_rank']\n",
+    "\n",
+    "metric_cols = ['score', 'irmsd', 'fnat', 'lrmsd', 'ilrmsd',\n",
+    "              'dockq', 'air', 'bsa', 'desolv', 'dihe',\n",
+    "              'elec', 'total', 'vdw']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Get the metrics from the best PDB\n",
+    "ss_best = ss_df[ss_df['best_pdb_flag'] == True].drop(columns=discard_cols)\n",
+    "\n",
+    "## add \"_best\" to the column names except for 'experiment_id' and model\n",
+    "ss_best.columns = [f\"{col}_best\" if col in metric_cols else col for col in ss_best.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Summarize the results by experiment_id, summarizing the metrics\n",
+    "ss_summary = ss_df.groupby(['experiment_id']).agg({'score': ['min','mean', 'std'],\n",
+    "                                                   'irmsd': ['min', 'mean', 'std'],\n",
+    "                                                   'fnat': ['min','mean', 'std'],\n",
+    "                                                   'lrmsd': ['min','mean', 'std'],\n",
+    "                                                   'dockq': ['max','mean', 'std'],\n",
+    "                                                   'air': ['min','mean', 'std'],\n",
+    "                                                   'bsa': ['max','mean', 'std'],\n",
+    "                                                   'desolv': ['min','mean', 'std'],\n",
+    "                                                   'elec': ['min','mean', 'std'],\n",
+    "                                                   'total': ['min','mean', 'std'],\n",
+    "                                                   'vdw': ['min','mean', 'std']}).reset_index()\n",
+    "\n",
+    "## Flatten the column names\n",
+    "ss_summary.columns = ['experiment_id'] + ['_'.join(col).strip() for col in ss_summary.columns.values if col[0] in metric_cols]\n",
+    "\n",
+    "## Join the summary and best metrics\n",
+    "ss_summary = ss_summary.merge(ss_best, on=['experiment_id'], how='left')\n",
+    "\n",
+    "## Reorder columns starting with the meta columns and then alphabetically thereafter\n",
+    "ss_summary = ss_summary[meta_cols + sorted([col for col in ss_summary.columns if col not in meta_cols])]\n",
+    "\n",
+    "## Remove the 'best_pdb_flag' column\n",
+    "ss_summary = ss_summary.drop(columns=['best_pdb_flag'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -223,109 +212,119 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>experiment_id</th>\n",
-       "      <th>cluster_rank</th>\n",
-       "      <th>cluster_id</th>\n",
-       "      <th>n</th>\n",
-       "      <th>under_eval</th>\n",
-       "      <th>score</th>\n",
-       "      <th>score_std</th>\n",
-       "      <th>irmsd</th>\n",
-       "      <th>irmsd_std</th>\n",
-       "      <th>fnat</th>\n",
-       "      <th>...</th>\n",
-       "      <th>desolv</th>\n",
-       "      <th>desolv_std</th>\n",
-       "      <th>elec</th>\n",
-       "      <th>elec_std</th>\n",
-       "      <th>total</th>\n",
-       "      <th>total_std</th>\n",
-       "      <th>vdw</th>\n",
-       "      <th>vdw_std</th>\n",
+       "      <th>model</th>\n",
        "      <th>caprieval_rank</th>\n",
-       "      <th>best_pdb_path</th>\n",
+       "      <th>air_best</th>\n",
+       "      <th>air_mean</th>\n",
+       "      <th>air_min</th>\n",
+       "      <th>air_std</th>\n",
+       "      <th>bsa_best</th>\n",
+       "      <th>bsa_max</th>\n",
+       "      <th>bsa_mean</th>\n",
+       "      <th>...</th>\n",
+       "      <th>score_min</th>\n",
+       "      <th>score_std</th>\n",
+       "      <th>total_best</th>\n",
+       "      <th>total_mean</th>\n",
+       "      <th>total_min</th>\n",
+       "      <th>total_std</th>\n",
+       "      <th>vdw_best</th>\n",
+       "      <th>vdw_mean</th>\n",
+       "      <th>vdw_min</th>\n",
+       "      <th>vdw_std</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>TEST_5A3I</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>10</td>\n",
-       "      <td>-</td>\n",
-       "      <td>15.923</td>\n",
-       "      <td>6.469</td>\n",
-       "      <td>8.819</td>\n",
-       "      <td>7.485</td>\n",
-       "      <td>0.369</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.63</td>\n",
-       "      <td>3.176</td>\n",
-       "      <td>-284.209</td>\n",
-       "      <td>31.112</td>\n",
-       "      <td>1065.848</td>\n",
-       "      <td>91.206</td>\n",
-       "      <td>-73.191</td>\n",
-       "      <td>6.087</td>\n",
+       "      <td>12H5__EPI1158808</td>\n",
+       "      <td>../08_mdscoring/mdscoring_5.pdb</td>\n",
        "      <td>1</td>\n",
-       "      <td>../../5_mdref/mdref_1.pdb</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2320.38</td>\n",
+       "      <td>2320.38</td>\n",
+       "      <td>2129.082500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-163.029</td>\n",
+       "      <td>16.511306</td>\n",
+       "      <td>-426.065</td>\n",
+       "      <td>-386.461875</td>\n",
+       "      <td>-460.116</td>\n",
+       "      <td>50.024223</td>\n",
+       "      <td>-88.917</td>\n",
+       "      <td>-72.713250</td>\n",
+       "      <td>-88.917</td>\n",
+       "      <td>11.899694</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>TEST_5A3I</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>10</td>\n",
-       "      <td>-</td>\n",
-       "      <td>15.923</td>\n",
-       "      <td>6.469</td>\n",
-       "      <td>8.819</td>\n",
-       "      <td>7.485</td>\n",
-       "      <td>0.369</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.63</td>\n",
-       "      <td>3.176</td>\n",
-       "      <td>-284.209</td>\n",
-       "      <td>31.112</td>\n",
-       "      <td>1065.848</td>\n",
-       "      <td>91.206</td>\n",
-       "      <td>-73.191</td>\n",
-       "      <td>6.087</td>\n",
+       "      <th>1</th>\n",
+       "      <td>FLD21.140__EPI355443</td>\n",
+       "      <td>../08_mdscoring/mdscoring_10.pdb</td>\n",
        "      <td>1</td>\n",
-       "      <td>../../5_mdref/mdref_1.pdb</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2249.86</td>\n",
+       "      <td>2249.86</td>\n",
+       "      <td>2112.828889</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-138.378</td>\n",
+       "      <td>15.918808</td>\n",
+       "      <td>-416.168</td>\n",
+       "      <td>-356.645556</td>\n",
+       "      <td>-416.168</td>\n",
+       "      <td>37.354104</td>\n",
+       "      <td>-75.733</td>\n",
+       "      <td>-64.392556</td>\n",
+       "      <td>-75.733</td>\n",
+       "      <td>7.767551</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 29 columns</p>\n",
+       "<p>2 rows × 49 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  experiment_id cluster_rank cluster_id   n under_eval   score  score_std  \\\n",
-       "0     TEST_5A3I            -          -  10          -  15.923      6.469   \n",
-       "0     TEST_5A3I            -          -  10          -  15.923      6.469   \n",
+       "          experiment_id                             model  caprieval_rank  \\\n",
+       "0      12H5__EPI1158808   ../08_mdscoring/mdscoring_5.pdb               1   \n",
+       "1  FLD21.140__EPI355443  ../08_mdscoring/mdscoring_10.pdb               1   \n",
        "\n",
-       "   irmsd  irmsd_std   fnat  ...  desolv  desolv_std     elec  elec_std  \\\n",
-       "0  8.819      7.485  0.369  ...    3.63       3.176 -284.209    31.112   \n",
-       "0  8.819      7.485  0.369  ...    3.63       3.176 -284.209    31.112   \n",
+       "   air_best  air_mean  air_min  air_std  bsa_best  bsa_max     bsa_mean  ...  \\\n",
+       "0       0.0       0.0      0.0      0.0   2320.38  2320.38  2129.082500  ...   \n",
+       "1       0.0       0.0      0.0      0.0   2249.86  2249.86  2112.828889  ...   \n",
        "\n",
-       "      total  total_std     vdw  vdw_std  caprieval_rank  \\\n",
-       "0  1065.848     91.206 -73.191    6.087               1   \n",
-       "0  1065.848     91.206 -73.191    6.087               1   \n",
+       "   score_min  score_std  total_best  total_mean  total_min  total_std  \\\n",
+       "0   -163.029  16.511306    -426.065 -386.461875   -460.116  50.024223   \n",
+       "1   -138.378  15.918808    -416.168 -356.645556   -416.168  37.354104   \n",
        "\n",
-       "               best_pdb_path  \n",
-       "0  ../../5_mdref/mdref_1.pdb  \n",
-       "0  ../../5_mdref/mdref_1.pdb  \n",
+       "   vdw_best   vdw_mean  vdw_min    vdw_std  \n",
+       "0   -88.917 -72.713250  -88.917  11.899694  \n",
+       "1   -75.733 -64.392556  -75.733   7.767551  \n",
        "\n",
-       "[2 rows x 29 columns]"
+       "[2 rows x 49 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metrics_df"
+    "ss_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Write out to CSV\n",
+    "ss_summary.to_csv('caprieval_ss_summary.csv', index=False)"
    ]
   }
  ],
