--- a/scripts/6_metrics_collection/collect_metrics.ipynb
+++ b/scripts/6_metrics_collection/collect_metrics.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,25 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Create empty dataframe to store results\n",
-    "metrics_df = pd.DataFrame(columns=['experiment_id', 'cluster_rank', 'cluster_id', 'n', 'under_eval',\n",
-    "                                   'score', 'score_std', 'irmsd', 'irmsd_std',\n",
-    "                                   'fnat', 'fnat_std', 'lrmsd', 'lrmsd_std', 'dockq', 'dockq_std',\n",
-    "                                   'air', 'air_std', 'bsa', 'bsa_std',\n",
-    "                                   'desolv', 'desolv_std', 'elec', 'elec_std',\n",
-    "                                   'total', 'total_std', 'vdw', 'vdw_std',\n",
-    "                                   'caprieval_rank', 'best_pdb_path'])\n",
-    "\n",
-    "# metrics_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,15 +44,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Getting metrics for experiment: 12H5__EPI1158808\n",
-      "Getting metrics for experiment: FLD21.140__EPI355443\n"
+      "Getting metrics for experiment: 12H5__EPI101875\n",
+      "Getting metrics for experiment: 100F4__EPI101875\n",
+      "Getting metrics for experiment: 100F4__EPI101477\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/q3/j7vd65mj4w112n2n4bzhflfm0000gq/T/ipykernel_77736/3906977392.py:19: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  ss_df = ss_df.append(ss_df_iter)\n",
+      "/var/folders/q3/j7vd65mj4w112n2n4bzhflfm0000gq/T/ipykernel_77736/3906977392.py:19: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  ss_df = ss_df.append(ss_df_iter)\n",
+      "/var/folders/q3/j7vd65mj4w112n2n4bzhflfm0000gq/T/ipykernel_77736/3906977392.py:19: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  ss_df = ss_df.append(ss_df_iter)\n"
      ]
     }
    ],
@@ -78,7 +74,8 @@
     "    experiment_id = experiment['experiment_id']\n",
     "\n",
     "    ## Check if the output/ directory exists\n",
-    "    outputs_dir = f\"../../data/experiments/{experiment_id}/output/10_caprieval\"\n",
+    "    outputs_dir = f\"../../data/experiments_test/{experiment_id}/output/10_caprieval\"\n",
+    "    # outputs_dir = f\"../../data/experiments/{experiment_id}/output/10_caprieval\"\n",
     "    if os.path.exists(outputs_dir):\n",
     "        print(f\"Getting metrics for experiment: {experiment_id}\")\n",
     "\n",
@@ -96,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +107,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -237,78 +234,106 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>12H5__EPI1158808</td>\n",
-       "      <td>../08_mdscoring/mdscoring_5.pdb</td>\n",
+       "      <td>100F4__EPI101477</td>\n",
+       "      <td>../08_mdscoring/mdscoring_1.pdb</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2320.38</td>\n",
-       "      <td>2320.38</td>\n",
-       "      <td>2129.082500</td>\n",
+       "      <td>2489.36</td>\n",
+       "      <td>2489.36</td>\n",
+       "      <td>2193.210</td>\n",
        "      <td>...</td>\n",
-       "      <td>-163.029</td>\n",
-       "      <td>16.511306</td>\n",
-       "      <td>-426.065</td>\n",
-       "      <td>-386.461875</td>\n",
-       "      <td>-460.116</td>\n",
-       "      <td>50.024223</td>\n",
-       "      <td>-88.917</td>\n",
-       "      <td>-72.713250</td>\n",
-       "      <td>-88.917</td>\n",
-       "      <td>11.899694</td>\n",
+       "      <td>-152.676</td>\n",
+       "      <td>14.390202</td>\n",
+       "      <td>-384.496</td>\n",
+       "      <td>-331.561400</td>\n",
+       "      <td>-384.496</td>\n",
+       "      <td>31.555943</td>\n",
+       "      <td>-95.826</td>\n",
+       "      <td>-79.558700</td>\n",
+       "      <td>-95.826</td>\n",
+       "      <td>11.011542</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>FLD21.140__EPI355443</td>\n",
-       "      <td>../08_mdscoring/mdscoring_10.pdb</td>\n",
+       "      <td>100F4__EPI101875</td>\n",
+       "      <td>../08_mdscoring/mdscoring_6.pdb</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2249.86</td>\n",
-       "      <td>2249.86</td>\n",
-       "      <td>2112.828889</td>\n",
+       "      <td>2278.42</td>\n",
+       "      <td>2278.42</td>\n",
+       "      <td>2121.084</td>\n",
        "      <td>...</td>\n",
-       "      <td>-138.378</td>\n",
-       "      <td>15.918808</td>\n",
-       "      <td>-416.168</td>\n",
-       "      <td>-356.645556</td>\n",
-       "      <td>-416.168</td>\n",
-       "      <td>37.354104</td>\n",
-       "      <td>-75.733</td>\n",
-       "      <td>-64.392556</td>\n",
-       "      <td>-75.733</td>\n",
-       "      <td>7.767551</td>\n",
+       "      <td>-144.845</td>\n",
+       "      <td>11.835390</td>\n",
+       "      <td>-299.983</td>\n",
+       "      <td>-277.666000</td>\n",
+       "      <td>-316.884</td>\n",
+       "      <td>26.342276</td>\n",
+       "      <td>-97.768</td>\n",
+       "      <td>-77.575800</td>\n",
+       "      <td>-97.768</td>\n",
+       "      <td>8.901668</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12H5__EPI101875</td>\n",
+       "      <td>../08_mdscoring/mdscoring_4.pdb</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1975.49</td>\n",
+       "      <td>1975.49</td>\n",
+       "      <td>1688.560</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-131.849</td>\n",
+       "      <td>6.581853</td>\n",
+       "      <td>-225.688</td>\n",
+       "      <td>-290.055333</td>\n",
+       "      <td>-369.805</td>\n",
+       "      <td>57.607843</td>\n",
+       "      <td>-70.406</td>\n",
+       "      <td>-59.976778</td>\n",
+       "      <td>-70.406</td>\n",
+       "      <td>5.182947</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 49 columns</p>\n",
+       "<p>3 rows × 49 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          experiment_id                             model  caprieval_rank  \\\n",
-       "0      12H5__EPI1158808   ../08_mdscoring/mdscoring_5.pdb               1   \n",
-       "1  FLD21.140__EPI355443  ../08_mdscoring/mdscoring_10.pdb               1   \n",
+       "      experiment_id                            model  caprieval_rank  \\\n",
+       "0  100F4__EPI101477  ../08_mdscoring/mdscoring_1.pdb               1   \n",
+       "1  100F4__EPI101875  ../08_mdscoring/mdscoring_6.pdb               1   \n",
+       "2   12H5__EPI101875  ../08_mdscoring/mdscoring_4.pdb               5   \n",
        "\n",
-       "   air_best  air_mean  air_min  air_std  bsa_best  bsa_max     bsa_mean  ...  \\\n",
-       "0       0.0       0.0      0.0      0.0   2320.38  2320.38  2129.082500  ...   \n",
-       "1       0.0       0.0      0.0      0.0   2249.86  2249.86  2112.828889  ...   \n",
+       "   air_best  air_mean  air_min  air_std  bsa_best  bsa_max  bsa_mean  ...  \\\n",
+       "0       0.0       0.0      0.0      0.0   2489.36  2489.36  2193.210  ...   \n",
+       "1       0.0       0.0      0.0      0.0   2278.42  2278.42  2121.084  ...   \n",
+       "2       0.0       0.0      0.0      0.0   1975.49  1975.49  1688.560  ...   \n",
        "\n",
        "   score_min  score_std  total_best  total_mean  total_min  total_std  \\\n",
-       "0   -163.029  16.511306    -426.065 -386.461875   -460.116  50.024223   \n",
-       "1   -138.378  15.918808    -416.168 -356.645556   -416.168  37.354104   \n",
+       "0   -152.676  14.390202    -384.496 -331.561400   -384.496  31.555943   \n",
+       "1   -144.845  11.835390    -299.983 -277.666000   -316.884  26.342276   \n",
+       "2   -131.849   6.581853    -225.688 -290.055333   -369.805  57.607843   \n",
        "\n",
        "   vdw_best   vdw_mean  vdw_min    vdw_std  \n",
-       "0   -88.917 -72.713250  -88.917  11.899694  \n",
-       "1   -75.733 -64.392556  -75.733   7.767551  \n",
+       "0   -95.826 -79.558700  -95.826  11.011542  \n",
+       "1   -97.768 -77.575800  -97.768   8.901668  \n",
+       "2   -70.406 -59.976778  -70.406   5.182947  \n",
        "\n",
-       "[2 rows x 49 columns]"
+       "[3 rows x 49 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
