Add handling for incomplete jobs

--- a/scripts/3_experiment_generation/0_create_experiment_list.ipynb
+++ b/scripts/3_experiment_generation/0_create_experiment_list.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -19,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 11 antibodies X 163 antigens, total of 1793 experiments.\n"
+      "There are 11 antibodies X 1 antigens, total of 11 experiments.\n"
      ]
     }
    ],
@@ -40,6 +41,9 @@
     "\n",
     "antigen_ids = antigens['antigen_id'].tolist()\n",
     "\n",
+    "## Manually set antigen_ids to missing ones\n",
+    "# antigen_ids = ['EPI3358339']\n",
+    "\n",
     "n_experiments = len(antibody_ids) * len(antigen_ids)\n",
     "\n",
     "print(f\"There are {len(antibody_ids)} antibodies X {len(antigen_ids)} antigens, total of {n_experiments} experiments.\")"
@@ -47,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,55 +97,43 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>experiment_id</th>\n",
-       "      <th>antibody_id</th>\n",
-       "      <th>antigen_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>H5.3__EPI2800361</td>\n",
-       "      <td>H5.3</td>\n",
-       "      <td>EPI2800361</td>\n",
+       "      <td>H5M9__EPI3358339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>AVFluIgG01__EPI454493</td>\n",
-       "      <td>AVFluIgG01</td>\n",
-       "      <td>EPI454493</td>\n",
+       "      <td>3C11__EPI3358339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>13D4__EPI687187</td>\n",
-       "      <td>13D4</td>\n",
-       "      <td>EPI687187</td>\n",
+       "      <td>13D4__EPI3358339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>FLD194__EPI340788</td>\n",
-       "      <td>FLD194</td>\n",
-       "      <td>EPI340788</td>\n",
+       "      <td>65C6__EPI3358339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>13D4__EPI1158808</td>\n",
-       "      <td>13D4</td>\n",
-       "      <td>EPI1158808</td>\n",
+       "      <td>FLD21.140__EPI3358339</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           experiment_id antibody_id  antigen_id\n",
-       "0       H5.3__EPI2800361        H5.3  EPI2800361\n",
-       "1  AVFluIgG01__EPI454493  AVFluIgG01   EPI454493\n",
-       "2        13D4__EPI687187        13D4   EPI687187\n",
-       "3      FLD194__EPI340788      FLD194   EPI340788\n",
-       "4       13D4__EPI1158808        13D4  EPI1158808"
+       "           experiment_id\n",
+       "0       H5M9__EPI3358339\n",
+       "1       3C11__EPI3358339\n",
+       "2       13D4__EPI3358339\n",
+       "3       65C6__EPI3358339\n",
+       "4  FLD21.140__EPI3358339"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,12 +150,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Write to file\n",
     "experiments_df.to_csv('../4_experiment_submission/experiments_full.csv', index=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-------------------\n",
+    "### Handle Incomplete Experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Get experiments that are incomplete\n",
+    "experiments = pd.read_excel('../../Experiments.xlsx', sheet_name='Experiments')\n",
+    "## Filter to where the complete column is False\n",
+    "incomplete_experiments = experiments[experiments['complete'] == False]['experiment_id'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Add rows to experiments_df for incomplete experiments\n",
+    "experiments_df = pd.concat([experiments_df, pd.DataFrame(incomplete_experiments, columns=['experiment_id'])], ignore_index=True)\n",
+    "\n",
+    "experiments_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Write to file\n",
+    "experiments_df.to_csv('../4_experiment_submission/experiments_redo_1.csv', index=False)"
    ]
   }
  ],
@@ -183,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
