--- a/scripts/5_cleanup/cleanup_unnecessary_files.ipynb
+++ b/scripts/5_cleanup/cleanup_unnecessary_files.ipynb
@@ -27,8 +27,9 @@
     "## Load in Experiments list and define the directory where the experiments are stored\n",
     "# experiments_dir = '../../data/experiments_test'\n",
     "# experiments_dir = '../../data/experiments'\n",
-    "experiments_dir = 'T:\\\\Influenza_H5-Antibody_Predictions_data\\\\experiments'\n",
+    "# experiments_dir = 'T:\\\\Influenza_H5-Antibody_Predictions_data\\\\experiments'\n",
     "# experiments_dir = '/scratch/cford38/Influenza_H5-Antibody_Predictions/experiments'\n",
+    "experiments_dir = '../../data/results'\n",
     "\n",
     "experiments = pd.read_excel('../../Experiments.xlsx', sheet_name='Experiments', engine='openpyxl')"
    ]
@@ -1834,7 +1835,18 @@
       "Cleaning up 100F4__EPI2017778...\n",
       "Cleaning up 13D4__EPI107813...\n",
       "Cleaning up H5M9__EPI600770...\n",
-      "Cleaning up FLD194__EPI808932...\n"
+      "Cleaning up FLD194__EPI808932...\n",
+      "Cleaning up H5M9__EPI3358339...\n",
+      "Cleaning up 3C11__EPI3358339...\n",
+      "Cleaning up 13D4__EPI3358339...\n",
+      "Cleaning up 65C6__EPI3358339...\n",
+      "Cleaning up FLD21.140__EPI3358339...\n",
+      "Cleaning up 100F4__EPI3358339...\n",
+      "Cleaning up AVFluIgG01__EPI3358339...\n",
+      "Cleaning up H5.3__EPI3358339...\n",
+      "Cleaning up 12H5__EPI3358339...\n",
+      "Cleaning up FLD194__EPI3358339...\n",
+      "Cleaning up AVFluIgG03__EPI3358339...\n"
      ]
     }
    ],
@@ -1896,7 +1908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
