--- a/scripts/6_metrics_collection/collect_PDB_remarks.ipynb
+++ b/scripts/6_metrics_collection/collect_PDB_remarks.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,8 @@
     "                model_df['best_model'] = model_name == best_model\n",
     "\n",
     "                ## Append to the main dataframe\n",
-    "                haddock_energy_df = haddock_energy_df.append(model_df, ignore_index=True)"
+    "                # haddock_energy_df = haddock_energy_df.append(model_df, ignore_index=True)\n",
+    "                haddock_energy_df = pd.concat([haddock_energy_df, model_df], ignore_index=True)"
    ]
   },
   {
@@ -1026,7 +1027,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
