--- a/scripts/7_analyses/make_statistics.Rmd
+++ b/scripts/7_analyses/make_statistics.Rmd
@@ -7,8 +7,6 @@ library(ggplot2)
 library(ggpubr)
 ```
 
-
-
 ## Load in Data
 
 ```{r}
@@ -22,7 +20,6 @@ data <- experiments %>%
   left_join(antigens, by="antigen_id")
 ```
 
-
 ## Create Boxplots
 
 ```{r}
@@ -31,14 +28,52 @@ plot_comparisons <- combn(unique(data$antibody_id), 2, simplify = FALSE)
 # pymol_palette <- c("#4D4DFF","#1A9999")
 ```
 
-
 ### VDW Energy
+
+```{r}
+## perform wilcox test on plot_comparisons
+wilcox_results <- lapply(plot_comparisons, function(x) {
+  wilcox.test(data %>% 
+                filter(antibody_id %in% x) %>% 
+                pull(vdw_mean) ~ data %>% 
+                filter(antibody_id %in% x) %>% 
+                pull(antibody_id))
+})
+
+## Filter to significant
+sig_plot_comparisons <- plot_comparisons[sapply(wilcox_results,
+                                                function(x) x$p.value < 0.05)]
+```
+
+```{r}
+## Violin plot of VDW energy by antibody only showing significant comparisons
+
+vdw_violin <- ggviolin(data,
+                       x = "antibody_id",
+                       y = "vdw_mean",
+                       xlab = "Antibody",
+                       ylab = "Mean van der Waals Energy",
+                       color = "antibody_id",
+                       # palette = pymol_palette,
+                       add = "boxplot") + 
+  theme(axis.title.x=element_blank(),
+        axis.text.x=element_blank(),
+        axis.ticks.x=element_blank(),
+        legend.title=element_blank()) +
+  stat_compare_means(method = "wilcox.test",
+                     hide.ns = TRUE,
+                     comparisons = sig_plot_comparisons)
+
+
+vdw_violin
+```
+
 ```{r}
 vdw_boxplot <- ggboxplot(data,
                          x = "antibody_id",
                          y = "vdw_mean",
-                         xlab = "",
-                         ylab = "van der Waals Energy",
+                         xlab = "Antibody",
+                         ylab = "Mean van der Waals Energy",
                          color = "antibody_id",
                          # palette = pymol_palette,
                          add = "dotplot") + 
@@ -47,7 +82,43 @@ vdw_boxplot <- ggboxplot(data,
         axis.ticks.x=element_blank(),
         legend.title=element_blank()) +
   stat_compare_means(method = "wilcox.test",
-                     comparisons = plot_comparisons)
+                     hide.ns = TRUE,
+                     comparisons = sig_plot_comparisons)
 
 vdw_boxplot
+```
+
+## Scatterplots
+
+### VDW by Year
+
+```{r}
+scatter_vdw_by_year <- ggplot(data %>% 
+                                filter(antigen_collection_year >= 2000),
+                              aes(
+                                x = antigen_collection_year,
+                                y = vdw_mean,
+                                group = antibody_id,
+                                color = antigen_host_order
+                              )
+) + 
+  geom_point() +
+  geom_smooth(method = lm,
+              se = TRUE,
+              col='grey',
+              linewidth=0.7) +
+  stat_cor(method = "spearman",
+           # aes(color = antigen_host_order),
+           label.x = 2000,
+           label.y = max(data$vdw_mean) - 50
+  ) +
+  facet_wrap(~ antibody_id, ncol = 3) +
+  labs(y='Mean van der Waals Energy',
+       x='Collection Year',
+       color = "Antibody") +
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1),
+        legend.position = "none")
+
+scatter_vdw_by_year
 ```
